force-app/main/default/objects/Capacity_Rebuild_Job__c/Capacity_Rebuild_Job__c.object-meta.xml
<CustomObject>
    <label>Capacity Rebuild Job</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Capacity Rebuild Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Rebuild Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>