force-app/main/default/objects/Capacity_Rebuild_Job__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Capacity Rebuild Jobs</relationshipLabel>
    <relationshipName>Capacity_Rebuild_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>