force-app/main/default/objects/Capacity_Rebuild_Job__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence Delete</fullName>
            </value>
            <value>
                <fullName>Absence Insert</fullName>
            </value>
            <value>
                <fullName>Absence Update</fullName>
            </value>
            <value>
                <fullName>Capacity Template Delete</fullName>
            </value>
            <value>
                <fullName>Capacity Template Insert</fullName>
            </value>
            <value>
                <fullName>Capacity Template Update</fullName>
            </value>
            <value>
                <fullName>Resource Capacity Insert New Day</fullName>
            </value>
            <value>
                <fullName>Service Appointment Update</fullName>
            </value>
            <value>
                <fullName>Service Appointment Update No AR</fullName>
            </value>
            <value>
                <fullName>Service Resource Update</fullName>
            </value>
            <value>
                <fullName>Service Territory Member Delete</fullName>
            </value>
            <value>
                <fullName>Service Territory Member Insert</fullName>
            </value>
            <value>
                <fullName>Service Territory Member Update</fullName>
            </value>
            <value>
                <fullName>Service Territory Update</fullName>
            </value>
            <value>
                <fullName>Service Territory Update - With Resource</fullName>
            </value>
            <value>
                <fullName>Shift Delete</fullName>
            </value>
            <value>
                <fullName>Shift Insert</fullName>
            </value>
            <value>
                <fullName>Shift Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>